	coordinates.  (Wish of PR#11192)

    o	pdf() has new arguments 'useDingbats' (set to FALSE for use
	with broken viewers) and 'colormodel'.	It now only references
	the ZapfDingbats font if it is used.

	The default PDF version is now 1.4, since viewers that do not
	accept that are now rare.

    o	The behaviour of readLines() for incomplete final lines on
    	non-text-mode connections has been changed to be like blocking
    	rather than non-blocking text-mode connections.

    o	?pkg::topic and ?pkg:::topic now find help on 'topic' from
	package 'pkg' (and not help on :: or :::).

    o	??topic now does help.search("topic"); variations such as
    	??pkg::topic or field??topic are also supported.

    o	There is support for using ICU (International Components for
	Unicode) for collation, enabled by configure option --with-ICU
	on a Unix-alike and by a setting in MkRules on Windows.
	Function icuSetCollate() allows the collation rules (including
	the locale) to be tuned.  [Experimental]

    o	New function as.hexmode() for converting integers in hex format.
    	format.hexmode() and as.character.hexmode() gain an 'upper.case'
	argument.

    o	bitmap() and dev2bitmap() gain support for anti-aliasing.
	The default type has been changed to '16m', which supports
	anti-aliasing.

    o	readCitationFile() (and hence citation) now reads a package's
	CITATION file in the package's declared encoding (if there is one).

    o	If S4 method dispatch is on and S4 objects are found as
	attributes, show() rather than print() is used to print the
	S4 attributes.

    o	as.array() is now generic, gains a '...' argument.

    o	Starting package tcltk without access to Tk (e.g. no available
    	display) is now a warning rather than an error, as Tcl
    	will still be usable.  (On most platforms it was possible to
    	inhibit Tk by not having DISPLAY set, but not on Windows nor
    	Mac OS X builds with --with-aqua.)
